--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Flask==3.1.0
-tensorflow-cpu==2.12.0  # Or the latest CPU version
+flask
+gunicorn
+tensorflow  # or keras if you're using that
 numpy
-Pillow
+pillow
+
